@@ -1,5 +1,14 @@
 2008-04-21  Geoffrey Garen  <ggaren@apple.com>
 
+        Reviewed by Sam Weinig.
+        
+        Moved bottom() from ScopeChain to ScopeChainNode, simplifying it based
+        on the knowledge that the ScopeChain is never empty.
+
+        SunSpider reports no change.
+
+2008-04-21  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Oliver Hunt.
         
         Moved begin() and end() from ScopeChain to ScopeChainNode. 
